--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,11 @@
 MONGO_URI=mongodb://localhost:27017/mern_auth
 JWT_SECRET=yourSuperSecretKey
+PORT=5000
+API_URL=http://localhost:5000
+CLIENT_URL=http://localhost:5173
+
+# SMTP_HOST=smtp.ethereal.email   # Develop stage use ethereal
+# SMTP_PORT=587
+# SMTP_USER=...                  
+# SMTP_PASS=...
+# MAIL_FROM="UoN Events <no-reply@uon-events.test>"
